[package]
name = "crityp"
description = "Benchmark support for typst."
categories = ["compilers", "command-line-utilities"]
keywords = ["language", "typst"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "crityp"
path = "src/main.rs"
required-features = ["cli"]
test = false
doctest = false
bench = false
doc = false

[dependencies]

anyhow.workspace = true
base64.workspace = true
clap = { workspace = true, optional = true }
criterion = "0.5.1"
# criterion = { path = "../../target/criterion.rs" }
comemo.workspace = true
ecow.workspace = true
tinymist-std.workspace = true
tinymist-project = { workspace = true, features = ["lsp"] }
typst.workspace = true
typst-syntax.workspace = true

[dev-dependencies]
insta.workspace = true

[features]
default = ["cli", "embed-fonts"]
cli = ["clap", "clap/wrap_help"]

# Embeds Typst's default fonts for
# - text (Linux Libertine),
# - math (New Computer Modern Math), and
# - code (Deja Vu Sans Mono)
# and additionally New Computer Modern for text
# into the binary.
embed-fonts = ["tinymist-project/fonts"]

[lints]
workspace = true
