[package]
name = "sync-ls"
description = "Synchronized language service inspired by async-lsp, primarily for tinymist."
categories = ["compilers", "development-tools"]
keywords = ["lsp", "dap", "language", "language-server"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

anyhow.workspace = true
dapts = { workspace = true, optional = true }
log.workspace = true
lsp-types = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true

clap = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "time"], optional = true }
tokio-util = { workspace = true, optional = true }

[features]
dap = ["dapts"]
lsp = ["lsp-types"]
server = [
    "crossbeam-channel",
    "futures",
    "tokio",
    "tokio-util",
    "clap",
    "parking_lot",
]

[package.metadata.docs.rs]
features = ["dap", "lsp", "server"]

[lints]
workspace = true
