[package]
name = "tinymist-analysis"
description = "Typst Static Analyzers for Tinymist."
categories = ["compilers"]
keywords = ["language", "typst"]
# group: world
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ecow.workspace = true
log.workspace = true
serde.workspace = true
strum.workspace = true
toml.workspace = true
tinymist-world.workspace = true
typst.workspace = true

[dev-dependencies]
insta.workspace = true
regex.workspace = true

[lints]
workspace = true
