[package]
name = "tinymist-analysis"
description = "Typst Static Analyzers for Tinymist."
categories = ["compilers"]
keywords = ["language", "typst"]
# group: world
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
comemo.workspace = true
dashmap.workspace = true
ecow.workspace = true
ena.workspace = true
hashbrown.workspace = true
if_chain.workspace = true
itertools.workspace = true
log.workspace = true
lsp-types.workspace = true
parking_lot.workspace = true
regex.workspace = true
rpds.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_yaml.workspace = true
strum.workspace = true
tinymist-derive.workspace = true
tinymist-std.workspace = true
tinymist-world.workspace = true
toml.workspace = true
triomphe.workspace = true
typst.workspace = true
typst-shim.workspace = true
unscanny.workspace = true

[dev-dependencies]
insta.workspace = true
regex.workspace = true

[lints]
workspace = true
