[package]
name = "reflexo"
description = "A portable format to show (typst) document in web browser."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

comemo.workspace = true
ecow.workspace = true
parking_lot.workspace = true
web-time.workspace = true
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

bitvec = { version = "1" }
dashmap = { version = "5" }
tiny-skia-path.workspace = true

path-clean.workspace = true
base64.workspace = true
fxhash.workspace = true
rustc-hash.workspace = true
siphasher.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"
serde_json.workspace = true
serde_with.workspace = true
rkyv = { workspace = true, optional = true }

reflexo-typst-shim = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true

[features]

default = ["full"]
full = ["web", "flat-vector"]

rkyv = ["dep:rkyv", "rkyv/alloc", "rkyv/archive_le"]
rkyv-validation = ["dep:rkyv", "rkyv/validation"]
flat-vector = ["rkyv", "rkyv-validation"]

typst = ["dep:reflexo-typst-shim"]

__web = ["dep:wasm-bindgen", "dep:js-sys"]
web = ["__web"]
system = []
bi-hash = []
item-dashmap = []

[lints]
workspace = true
