[package]
name = "tinymist-core"
description = "Tinymist core library."
categories = ["compilers", "command-line-utilities"]
keywords = ["api", "language", "typst"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["web"] # "no-content-hint"


web = ["wasm-bindgen", "tinymist-world/web"]

# no-content-hint = ["reflexo-typst/no-content-hint"]

[dependencies]
wasm-bindgen = { version = "0.2.92", optional = true }
tinymist-world.workspace = true

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true
cargo_metadata = "0.18.0"

[lints]
workspace = true
