[package]
name = "tinymist-derive"
description = "Provides derive for tinymist."
categories = ["compilers"]
keywords = ["typst"]
# group: world
version = "0.13.2"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true

[lib]
proc-macro = true

[features]
typst-preview = []
