[package]
name = "tinymist-derive"
description = "Provides derive for tinymist."
categories = ["compilers"]
keywords = ["typst"]
# group: world
version = "0.13.16"
authors.workspace = true
license.workspace = true
edition = "2024"
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true

[lib]
proc-macro = true
