[package]
name = "tinymist-l10n"
description = "Benchmark support for typst."
categories = ["compilers", "command-line-utilities"]
keywords = ["language", "typst"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "tinymist-l10n"
path = "src/main.rs"
required-features = ["cli"]
test = false
doctest = false
bench = false
doc = false

[dependencies]

anyhow.workspace = true
clap = { workspace = true, optional = true }
comemo.workspace = true
ecow.workspace = true
walkdir.workspace = true
rayon.workspace = true

[dev-dependencies]
insta.workspace = true

[features]
default = ["cli"]
cli = ["clap", "clap/wrap_help"]

[lints]
workspace = true
