[package]
name = "tinymist-project"
description = "Project model of typst for tinymist."
categories = ["compilers"]
keywords = ["language", "typst"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
comemo.workspace = true
dirs.workspace = true
ecow.workspace = true
log.workspace = true
parking_lot.workspace = true
pathdiff.workspace = true
tokio.workspace = true
rayon.workspace = true
reflexo-typst.workspace = true
rpds.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tinymist-world = { workspace = true, features = ["system"] }
tinymist-std = { workspace = true, features = ["system"] }
tinymist-derive.workspace = true
toml.workspace = true
typst.workspace = true
typst-assets.workspace = true
typst-preview.workspace = true
notify.workspace = true

[features]

fonts = ["typst-assets/fonts"]
# "reflexo-typst/no-content-hint"
no-content-hint = []

[lints]
workspace = true
