[package]
name = "tinymist-project"
description = "Project model of typst for tinymist."
categories = ["compilers"]
keywords = ["language", "typst"]
# group: world
version = "0.13.12-rc3"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
comemo.workspace = true
dirs.workspace = true
ecow.workspace = true
log.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync"] }
rayon.workspace = true
rpds.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tinymist-task.workspace = true
tinymist-world = { workspace = true }
tinymist-std = { workspace = true, features = ["typst"] }
tinymist-derive.workspace = true
tinymist-l10n.workspace = true
toml.workspace = true
typst.workspace = true
typst-assets.workspace = true
notify.workspace = true

[features]

fonts = ["typst-assets/fonts"]
no-content-hint = ["tinymist-task/no-content-hint"]
lsp = ["system"]

system = ["tinymist-std/system", "tinymist-world/system"]

[lints]
workspace = true
