[package]
name = "tinymist-query"
description = "Language queries for tinymist."
categories = ["compilers", "command-line-utilities"]
keywords = ["api", "language", "typst"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

anyhow.workspace = true
comemo.workspace = true
dirs.workspace = true
regex.workspace = true
yaml-rust2.workspace = true
biblatex.workspace = true
serde_yaml.workspace = true
itertools.workspace = true
strum.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
ena.workspace = true
once_cell.workspace = true
toml.workspace = true
walkdir.workspace = true
indexmap.workspace = true
ecow.workspace = true
siphasher.workspace = true
chrono.workspace = true

typst.workspace = true

reflexo.workspace = true
typst-shim.workspace = true

lsp-types.workspace = true
if_chain.workspace = true
percent-encoding.workspace = true
unscanny.workspace = true
pathdiff.workspace = true
ttf-parser.workspace = true
rust_iso639.workspace = true
rust_iso3166.workspace = true
dashmap.workspace = true
rustc-hash.workspace = true
hashbrown.workspace = true
triomphe.workspace = true
base64.workspace = true
typlite.workspace = true
tinymist-world.workspace = true
tinymist-analysis.workspace = true
tinymist-derive.workspace = true

[dev-dependencies]
once_cell.workspace = true
insta.workspace = true
serde.workspace = true
serde_json.workspace = true
typst-assets = { workspace = true, features = ["fonts"] }
reflexo-typst = { workspace = true, features = ["no-content-hint"] }
sha2 = { version = "0.10" }
hex = { version = "0.4" }

[lints]
workspace = true
