[package]
name = "tinymist-query"
description = "Language queries for tinymist."
categories = ["compilers", "command-line-utilities"]
keywords = ["api", "language", "typst"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

anyhow.workspace = true
base64.workspace = true
biblatex.workspace = true
comemo.workspace = true
dashmap.workspace = true
dirs.workspace = true
ena.workspace = true
ecow.workspace = true
hayagriva.workspace = true
itertools.workspace = true
indexmap.workspace = true
log.workspace = true
lsp-types.workspace = true
parking_lot.workspace = true
percent-encoding.workspace = true
rayon.workspace = true
regex.workspace = true
rpds.workspace = true
rust_iso639.workspace = true
rust_iso3166.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
siphasher.workspace = true
strum.workspace = true
tinymist-analysis.workspace = true
tinymist-derive.workspace = true
tinymist-l10n.workspace = true
tinymist-lint.workspace = true
tinymist-project = { workspace = true, features = ["lsp"] }
tinymist-std.workspace = true
tinymist-world = { workspace = true }
toml.workspace = true
ttf-parser.workspace = true
typlite = { workspace = true, default-features = false, features = [
    "no-content-hint",
] }
typst.workspace = true
typst-macros.workspace = true
typst-shim.workspace = true
typst-timing.workspace = true
typst-library.workspace = true
unscanny.workspace = true
walkdir.workspace = true
yaml-rust2.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
typst-assets = { workspace = true, features = ["fonts"] }
tinymist-tests = { workspace = true }
sha2 = { version = "0.10" }
hex = { version = "0.4" }

[features]
local-registry = ["tinymist-world/system"]
system = ["tinymist-project/system"]

[lints]
workspace = true
