[package]
name = "tinymist-render-vello"
description = "A renderer for the Typst typesetting system using Vello."
categories = ["compilers"]
keywords = ["api", "language", "typst"]
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

bytes.workspace = true
clap.workspace = true
comemo.workspace = true
env_logger.workspace = true
futures.workspace = true
indexmap.workspace = true
log.workspace = true
parking_lot.workspace = true
reflexo-vec2svg.workspace = true
reflexo-typst.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["time", "rt-multi-thread"] }
typst.workspace = true
typst-library.workspace = true
reflexo.workspace = true
tinymist-assets.workspace = true
tinymist-std.workspace = true
tinymist-preview.workspace = true
anyhow.workspace = true
pollster = "0.4.0"
vello = "0.6.0"
hayro = "0.4"
vello_svg = "0.8.0"
winit = "0.30.12"
smallvec = "1"
ezsockets = "0.7.1"
svgtypes = "0.15.2"
ecow.workspace = true
async-trait.workspace = true
ttf-parser.workspace = true
image.workspace = true


[features]

default = ["no-content-hint"]

# Disable the default content hint.
# This requires modifying typst.
no-content-hint = ["reflexo-typst/no-content-hint"]

# [lints]
# workspace = true
