[package]
name = "tinymist-task"
description = "Task model of typst for tinymist."
categories = ["compilers"]
keywords = ["language", "typst"]
# group: world
version = "0.13.12-rc4"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
comemo.workspace = true
dirs.workspace = true
ecow.workspace = true
log.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync"] }
rayon.workspace = true
rpds.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tinymist-world = { workspace = true }
tinymist-std = { workspace = true }
tinymist-derive.workspace = true
toml.workspace = true
typst.workspace = true
typst-assets.workspace = true
typst-eval.workspace = true
typst-html.workspace = true
typst-pdf.workspace = true
typst-render.workspace = true
typst-shim.workspace = true
typst-svg.workspace = true
notify.workspace = true

[features]

default = ["pdf", "text"]
no-content-hint = []

pdf = []
text = []

[lints]
workspace = true
