[package]
name = "tinymist-tests"
description = "Test support for Tinymist."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
comemo.workspace = true
insta.workspace = true
rayon.workspace = true
tinymist-analysis.workspace = true
tinymist-project = { workspace = true, features = ["lsp", "system", "no-content-hint"] }
tinymist-std.workspace = true
tinymist-vfs.workspace = true
tinymist-world.workspace = true
tokio = { workspace = true, features = ["sync"] }
typst.workspace = true
typst-assets = { workspace = true, features = ["fonts"] }

[lints]
workspace = true
