[package]
name = "tinymist-tests"
description = "Test support for Tinymist."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
comemo.workspace = true
insta.workspace = true
rayon.workspace = true
tinymist-analysis.workspace = true
tinymist-project = { workspace = true, features = ["lsp", "system", "mock"] }
tinymist-std.workspace = true
tinymist-vfs = { workspace = true, features = ["mock"] }
tinymist-world = { workspace = true, features = ["mock"] }
typst.workspace = true

[lints]
workspace = true
